fix style for stuck orai

--- a/src/pages/BalanceNew/StuckOraib/style.module.scss
+++ b/src/pages/BalanceNew/StuckOraib/style.module.scss
@@ -12,7 +12,9 @@
     align-items: center;
     justify-content: space-between;
     border: 1px solid transparent;
-
+    position: sticky;
+    top: 0;        
+    float: right;
     &:hover {
         border-color: #A871DF;
     }
